--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
- "scripts": {
+"scripts": {
   "dev": "tsx watch src/index.ts",
-  "build": "tsc",
+  "build": "npx tsc",
   "start": "node dist/index.js",
- "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
 },
   "dependencies": {
     "bcrypt": "^5.1.1",
