--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-"scripts": {
-  "dev": "tsx watch src/index.ts",
-  "build": "npx tsc",
-  "start": "node dist/index.js",
-  "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-},
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "node ./node_modules/typescript/bin/tsc",
+    "start": "node dist/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -34,6 +34,6 @@
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.3"
   }
 }
